--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 alt=""
               />
               <p class="top__slider-text">
-                500 руб/час 5 мест 50 тыс. км пробег
+                8 руб/мин 5 мест 50 тыс. км пробег
               </p>
             </div>
             <div class="top__slider-item">
@@ -76,7 +76,7 @@
                 alt=""
               />
               <p class="top__slider-text">
-                <span>500 руб/час</span> <span>5 мест</span>
+                <span>8 руб/мин</span> <span>5 мест</span>
                 <span>50 тыс. км пробег</span>
               </p>
             </div>
@@ -87,7 +87,7 @@
                 alt=""
               />
               <p class="top__slider-text">
-                <span>500 руб/час</span> <span>5 мест</span>
+                <span>8 руб/мин</span> <span>5 мест</span>
                 <span>50 тыс. км пробег</span>
               </p>
             </div>
@@ -98,7 +98,7 @@
                 alt=""
               />
               <p class="top__slider-text">
-                <span>500 руб/час</span> <span>5 мест</span>
+                <span>8 руб/мин</span> <span>5 мест</span>
                 <span>50 тыс. км пробег</span>
               </p>
             </div>
@@ -109,7 +109,7 @@
                 alt=""
               />
               <p class="top__slider-text">
-                <span>500 руб/час</span> <span>5 мест</span>
+                <span>8 руб/мин</span> <span>5 мест</span>
                 <span>50 тыс. км пробег</span>
               </p>
             </div>
@@ -120,7 +120,7 @@
                 alt=""
               />
               <p class="top__slider-text">
-                <span>500 руб/час</span> <span>5 мест</span>
+                <span>8 руб/мин</span> <span>5 мест</span>
                 <span>50 тыс. км пробег</span>
               </p>
             </div>
